inheritance now has a chance.  Comment: #7207
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@25367 8ebf8b4e-06f3-0310-961f-89f74618be54